[gd_scene load_steps=8 format=3 uid="uid://ca0qi1jic0dtm"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_1j8ow"]
[ext_resource type="PackedScene" uid="uid://b1amqp52ot6iw" path="res://scenes/levels/test_level.tscn" id="2_2sq2e"]
[ext_resource type="Texture2D" uid="uid://crhfhlpsju2xu" path="res://assets/cownado-title.png" id="3_4bgoj"]
[ext_resource type="Theme" uid="uid://semt14wpoo5d" path="res://scenes/ui/ui_theme.tres" id="4_bvhyg"]
[ext_resource type="Texture2D" uid="uid://5hp146fekugr" path="res://assets/button-2.png" id="5_atlxb"]
[ext_resource type="Texture2D" uid="uid://cvigtj206xfc8" path="res://assets/button-2-press.png" id="6_mcsoi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_82fi7"]
texture = ExtResource("6_mcsoi")
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1j8ow")
start_game_level = ExtResource("2_2sq2e")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("4_bvhyg")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
texture = ExtResource("3_4bgoj")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SpacerTop" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
texture_normal = ExtResource("5_atlxb")
texture_pressed = ExtResource("6_mcsoi")
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons/TextureButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.0
offset_right = 45.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "PLAY"
horizontal_alignment = 1

[node name="StartGame" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
theme = ExtResource("4_bvhyg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_82fi7")
text = "PLAY"

[node name="SpacerMid" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="QuitGame" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
theme = ExtResource("4_bvhyg")
text = "QUIT"

[node name="SpacerBot" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/StartGame" to="." method="_on_start_game_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/StartGame" to="." method="_on_start_game_mouse_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/QuitGame" to="." method="_on_quit_game_button_down"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/QuitGame" to="." method="_on_quit_game_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/QuitGame" to="." method="_on_quit_game_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/QuitGame" to="." method="_on_quit_game_mouse_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Buttons/QuitGame" to="." method="_on_quit_game_pressed"]
